--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "test:watch": "jest --watch",
     "coverage": "jest --coverage",
     "pw:install": "playwright install chromium",
-    "dev": "node scripts/dev-server.js"
+    "dev": "node scripts/dev-server.js",
+    "copy-blockly": "node scripts/copy-blockly.js",
+    "postinstall": "npm run copy-blockly"
+  },
+  "dependencies": {
+    "blockly": "^11.1.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.49.0",
